# easyget

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml
core/: app.py
core/data/: config.example.yaml  config.py  config.yaml
core/filters/: admin.py
core/handlers/: basic.py  callback.py
core/keyboards/: inline.py  reply.py
core/utils/: calculator.py  callback_data.py  commands.py  currency.py  enums.py  states.py
